--- a/index.html
+++ b/index.html
@@ -151,8 +151,15 @@
             }
         }
         @media screen and (min-width:865px) and (max-width: 1250px){
+        h1{
+            font-size: 30px;
+        }
         button{
             width: 80%;
+            font-size: 14px;
+        }
+        p{
+            font-size: 16px;
         }
         }
     </style>
